--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </li>
                         <li>
                             <a
-                                href="https://github.com/prakhars144/godot-horror-survival-game"
+                                href="https://github.com/prakhars144"
                                 title=""
                                 >Radioactive cave</a
                             >
