--- a/index.html
+++ b/index.html
@@ -1,133 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Prakhar's lair</title>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <div class="overlay"></div>
-        <div class="scanline"></div>
-        <div class="wrapper">
-            <div class="content clearfix">
-                <header class="site clearfix">
-                    <div class="col one">
-                        <img
-                            src="https://assets.codepen.io/2856/Logo_591Design_2015-12-01.png"
-                            alt="591 Systems"
-                            width="740"
-                            height="729"
-                            id="logo-v"
-                        />
-                    </div>
-                    <div class="col two">
-                        <h4>
-                            591 Systems (tm) <br />
-                            <b>H</b>euristically <b>E</b>ncrypted
-                            <b>R</b>ealtime <b>O</b>perating <b>S</b>ystem
-                            (HEROS)
-                        </h4>
-                        <p>----------------------------------------</p>
-                        <p>HEROS v 1.0.0</p>
-                        <p>(c)2024 591 Industries</p>
-                        <p>- Server 591 -</p>
-                    </div>
-                </header>
 
-                <nav class="site clear">
-                    <ul>
-                        <li>
-                            <a
-                                href="https://www.linkedin.com/in/prakhar-shukla-in/"
-                                title=""
-                                >City Ruins</a
-                            >
-                        </li>
-                        <li>
-                            <a
-                                href="https://github.com/prakhars144"
-                                title=""
-                                >Radioactive cave</a
-                            >
-                        </li>
-                    </ul>
-                </nav>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Prakhar's lair</title>
+	<link rel="stylesheet" href="styles.css" />
+</head>
 
-                <main>
-                    <section>
-                        <h1>Welcome, friend.</h1>
-                        <p>
-                            In the post-apocalyptic wasteland of New Haven,
-                            where remnants of the old world lie in ruins and
-                            survival hinges on ingenuity, stands
-                            <strong>Prakhar</strong>, a software engineer of
-                            unparalleled skill. Amidst the rubble and radiation,
-                            Prakhar harnesses the power of C++ to build and
-                            maintain the digital fortresses that keep his
-                            community safe.
-                        </p>
-                        <br /><br />
-                        <p>
-                            By day, he navigates the complexities of Kubernetes
-                            and Docker, deploying resilient systems that
-                            withstand the harshest conditions. His expertise in
-                            Retrieval-Augmented Generation and Large Language
-                            Models transforms scarce data into vital
-                            intelligence, while his mastery of AWS ensures that
-                            even in a world gone dark, his networks remain
-                            robust and reliable.
-                        </p>
-                        <br /><br />
-                        <p>
-                            When the sun dips below the horizon and the
-                            wasteland is cloaked in shadows, Prakhar retreats to
-                            his bunker. Here, amidst the hum of generators and
-                            the glow of ancient monitors, he indulges in his
-                            passion for game development. Using the Godot
-                            engine, he creates virtual worlds that offer a
-                            glimpse of hope and escapism, a testament to the
-                            enduring power of creativity.
-                        </p>
-                        <br /><br />
-                        <p>
-                            Prakhar is not just a survivor; he is a beacon of
-                            innovation in a desolate world, a creator whose work
-                            bridges the remnants of the past with the promise of
-                            the future. His story is one of resilience,
-                            ingenuity, and an unyielding drive to rebuild and
-                            inspire.
-                        </p>
-                        <br /><br />
-                        <p><strong>Endure. Innovate.</strong></p>
-                    </section>
-                </main>
+<body>
+	<div class="overlay"></div>
+	<div class="scanline"></div>
+	<div class="wrapper">
+		<div class="content clearfix">
+			<header class="site clearfix">
+				<p>Server: [ <span id="server-number"></span> ]</p>
+				<p>Audit: [ <span id="audit-number"></span> ] [initialized]</p>
+				<p>Loading kernel modules...</p>
+				<p>Starting system logger: <span id="logger-status">[ OK ]</span></p>
+				<p>Mounting local filesystems: <span id="mount-status">[ OK ]</span></p>
+				<p>Starting network services: <span id="network-status">[ OK ]</span></p>
+				<p>Starting SSH server: <span id="ssh-status">[ OK ]</span></p>
+				<p>Starting web server: <span id="web-status">[ OK ]</span></p>
+				<p>System boot complete.</p>
+				<p>_________________________</p>
+			</header>
+			<script>
+				document.getElementById('server-number').textContent = Math.random().toFixed(6);
+				document.getElementById('audit-number').textContent = Math.random().toFixed(6);
+			</script>
 
-                <footer class="button">
-                    <br /><br /><br />
-                    <p>
-                        <b
-                            >System Administrator Integrated Message System
-                            (SAIMS) >></b
-                        >
-                    </p>
-                    <br />
-                    <p>System Administrator (SYSADM) - Prakhar Shukla</p>
-                    <p>
-                        Welcome to the System Administrator Integrated Message
-                        System (SAIMS). Reach out with below information. The
-                        system administrator (SYSADM) will respond to your query
-                        after an appropriate amount of quiet contemplation.
-                    </p>
-                    <form>
-                        <br />
-                        <label>Name >></label> Prakhar Shukla
-                        <input type="text" /><br />
-                        <label>Email >></label> prakharshukla@outlook.in
-                        <input type="text" /><br />
-                    </form>
-                </footer>
-            </div>
-        </div>
-    </body>
+			<main>
+				<section>
+					<h1>Welcome, friend.</h1>
+					<p>
+						In the post-apocalyptic wasteland of New Haven, where remnants of the old world lie in ruins and
+						survival hinges on ingenuity, stands <strong>Prakhar</strong>, a software engineer of
+						unparalleled skill. Amidst the rubble and radiation, Prakhar harnesses the power of C++ to build
+						and maintain the digital fortresses that keep his community safe.
+					</p>
+					<br /><br />
+					<p>
+						By day, he navigates the complexities of WebRTC and web technologies, deploying resilient
+						systems that withstand the harshest conditions. His expertise in Retrieval-Augmented Generation
+						and Large Language Models transforms scarce data into vital intelligence, while his mastery of
+						AWS ensures that even in a world gone dark, his networks remain robust and reliable.
+					</p>
+					<br /><br />
+					<p>
+						When the sun dips below the horizon and the wasteland is cloaked in shadows, Prakhar retreats to
+						his bunker. Here, amidst the hum of generators and the glow of ancient monitors, he indulges in
+						his passion for game development. Using the Godot engine, he creates virtual worlds that offer a
+						glimpse of hope and escapism, a testament to the enduring power of creativity.
+					</p>
+					<br /><br />
+					<p>
+						Prakhar is not just a survivor; he is a beacon of innovation in a desolate world, a creator
+						whose work bridges the remnants of the past with the promise of the future. His story is one of
+						resilience, ingenuity, and an unyielding drive to rebuild and inspire.
+					</p>
+					<br /><br />
+					<p><strong>Endure. Innovate.</strong></p>
+				</section>
+			</main>
+
+			<footer class="button">
+				<br /><br /><br />
+				<p><b>Software Engineer - Prakhar Shukla</b> >></p>
+				<p>
+					Reach out with below information and he will respond to your query
+					after an appropriate amount of quiet contemplation.
+				</p>
+				<form>
+					<br />
+					<label>Name >> Prakhar Shukla</label>
+					<label>Email >> <a href="mailto:prakharshukla@outlook.in">HAM radio</a></label>
+					<label>Linkedin >> <a href="https://www.linkedin.com/in/prakhar-shukla-in/" title="">City
+							ruins</a></label>
+					<label>Github >> <a href="https://github.com/prakhars144" title="">Radioactive cave</a></label>
+				</form>
+			</footer>
+		</div>
+	</div>
+</body>
+
 </html>
